# app-builder-example

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.files/: nginx-domain.com  service-api.service  service-worker.service
.github/: copilot-instructions.md
.trae/rules/: project_rules.md
alembic/: env.py
alembic/versions/: f858620f00c0_initial_db.py
app/: celery.py  main.py
app/core/: models.py  settings.py
app/core/extended_settings/: app_settings.py  database_settings.py  llm_settings.py  logger_settings.py
app/database/: engine.py  models.py
app/router/: example_router.py  project_router.py  session_router.py
app/schema/: project_schema.py  session_schema.py
app/services/llm/: llm_agents.py  llm_config.py
app/services/llm/dataclasses/: project_info.py
app/services/llm/generations/: create_app.py
app/services/llm/mcps/: mcps.py
app/services/llm/prompts/: builder_prompts.py
app/services/llm/tools/: file_system.py
app/services/sandbox/: port_manager.py  sandbox_manager.py  server_manager.py
app/tasks/: example_tasks.py
sandbox/templates/: package.json  server.js
